--- a/index.html
+++ b/index.html
@@ -534,16 +534,22 @@
     <script>
         // File data with URLs - REPLACE THESE WITH YOUR ACTUAL FILES
         const files = [
-
             {
-                name: "GRWC mobile App.apk",
+                name: "GRWC_2v Apple/Pc",
+                type: "apk",
+                size: "9.6 MB",
+                date: "05 . 04. 2025",
+                url: "https://drive.google.com/uc?export=download&id=1gU9YSuXD6LuUxjyGggxh-OKdsT-aTm07" // ← REPLACE WITH YOUR URL
+            },
+            {
+                name: "GRWC Android App.apk",
                 type: "apk",
                 size: "30 MB",
                 date: "29 . 03. 2025",
                 url: "https://apk.e-droid.net/apk/app3523849-b7vt25.apk?v=6" // ← REPLACE WITH YOUR URL
             },
             {
-                name: "Admin_GRWC.apk",
+                name: "Admin_GRWC Android.apk",
                 type: "apk",
                 size: "30 MB",
                 date: "29 . 03. 2025",
@@ -557,10 +563,10 @@
                 url: "https://example.com/files/song.mp3" // ← REPLACE WITH YOUR URL
             },
             {
-                name: "GRWC.mp4",
-                type: "video",
-                size: "30 MB",
-                date: "3 days ago",
+                name: "GRWC_2v Apple/Pc",
+                type: "ipa",
+                size: "9.6 MB",
+                date: "05 . 04. 2025",
                 url: "https://apk.e-droid.net/apk/app3473759-gwfk4v.apk?v=8" // ← REPLACE WITH YOUR URL
             },
             {
