--- a/index.html
+++ b/index.html
@@ -535,23 +535,23 @@
         // File data with URLs - REPLACE THESE WITH YOUR ACTUAL FILES
         const files = [
             {
-                name: "GRWC_2v Apple/Pc",
+                name: "GRWC_2v",
                 type: "apk",
-                size: "9.6 MB",
+                size: "iOS/PC  |  9.6 MB",
                 date: "05 . 04. 2025",
                 url: "https://drive.google.com/uc?export=download&id=1gU9YSuXD6LuUxjyGggxh-OKdsT-aTm07" // ← REPLACE WITH YOUR URL
             },
             {
-                name: "GRWC Android App.apk",
+                name: "GRWC Users.apk",
                 type: "apk",
-                size: "30 MB",
+                size: "Android  |  30 MB",
                 date: "29 . 03. 2025",
                 url: "https://apk.e-droid.net/apk/app3523849-b7vt25.apk?v=6" // ← REPLACE WITH YOUR URL
             },
             {
-                name: "Admin_GRWC Android.apk",
+                name: "Admin_GRWC.apk",
                 type: "apk",
-                size: "30 MB",
+                size: "Android  |  30 MB",
                 date: "29 . 03. 2025",
                 url: "https://apk.e-droid.net/apk/app3473759-gwfk4v.apk?v=8" // ← REPLACE WITH YOUR URL
             },
@@ -564,10 +564,10 @@
             },
             {
                 name: "GRWC_2v Apple/Pc",
-                type: "ipa",
-                size: "9.6 MB",
+                type: "apk",
+                size: "iOS/PC  |  9.6 MB",
                 date: "05 . 04. 2025",
-                url: "https://apk.e-droid.net/apk/app3473759-gwfk4v.apk?v=8" // ← REPLACE WITH YOUR URL
+                url: "https://od.lk/d/ODlfMzI0OTU0NzZf/GRWC_2v" // ← REPLACE WITH YOUR URL
             },
             {
                 name: "Vacation_Photo.jpg",
@@ -600,9 +600,9 @@
             {
                 name: "Another_App.apk",
                 type: "apk",
-                size: "25.4 MB",
+                size: "29.6 MB",
                 date: "2 days ago",
-                url: "https://example.com/files/app2.apk" // ← REPLACE WITH YOUR URL
+                url: "https://od.lk/d/ODlfMzI0OTU0Nzlf/Admin_GRWC" // ← REPLACE WITH YOUR URL
             }
         ];
 
