--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkaApps | SkaDigitalHub</title>
     <!-- Google tag (gtag.js) --> 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NW82ZLRTS"></script> 
-    <script> 
-        window.dataLayer = window.dataLayer || []; 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RFQCD4NE2X"></script> 
+    <script> window.dataLayer = window.dataLayer || []; 
         function gtag(){dataLayer.push(arguments);} 
         gtag('js', new Date()); 
         
-        gtag('config', 'G-4NW82ZLRTS'); 
+        gtag('config', 'G-RFQCD4NE2X'); 
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
