--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         function gtag(){dataLayer.push(arguments);} 
         gtag('js', new Date()); 
         
-        gtag('config', 'G-RFQCD4NE2X'); 
+        gtag('config', 'G-H598CHW4DE'); 
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
