--- a/index.html
+++ b/index.html
@@ -605,6 +605,15 @@
                 date: "5 days ago",
                 url: "https://example.com/files/resume.docx" // ← REPLACE WITH YOUR URL
             },
+
+            {
+                name: "AdinyinaaALU.apk",
+                type: "apk",
+                size: "Android  |  30 MB",
+                date: "05 . 05. 2025",
+                url: "https://apk.e-droid.net/apk/app3575595-rl4f3u.apk?v=8" // ← REPLACE WITH YOUR URL
+            }
+            
             {
                 name: "Another_App.apk",
                 type: "apk",
