--- a/index.html
+++ b/index.html
@@ -543,6 +543,14 @@
         // File data with URLs - REPLACE THESE WITH YOUR ACTUAL FILES
         const files = [
             {
+                name: "TMSOM",
+                type: "apk",
+                size: "Android  |  29.9 MB",
+                date: "11 . 06. 2025",
+                url: "app/tmsom.apk" // ← REPLACE WITH YOUR URL
+            },
+            
+            {
                 name: "GRWC_2v",
                 type: "apk",
                 size: "iOS/PC  |  9.6 MB",
