--- a/index.html
+++ b/index.html
@@ -547,9 +547,8 @@
                 type: "apk",
                 size: "Android  |  29.9 MB",
                 date: "11 . 06. 2025",
-                url: "app/tmsom.apk" // ← REPLACE WITH YOUR URL
+                url: "https://apk.e-droid.net/apk/app3611499-28xujc.apk?v=8" // ← REPLACE WITH YOUR URL
             },
-            
             {
                 name: "GRWC_2v",
                 type: "apk",
